--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -25,7 +25,7 @@ body{
         width: 80vw;
     }
 }
-@media (max-width: 767px){
+@media (max-width: 768px){
     .container{
         width: 100vw;
         padding: 0 20px;
@@ -53,7 +53,7 @@ body{
         }
     }
 }
-@media (max-width: 767px){
+@media (max-width: 768px){
     .top{
         a{
             width: 50px;
@@ -111,7 +111,7 @@ body{
         }
     }
 }
-@media (max-width: 767px) {
+@media (max-width: 768px) {
     .header-bar{
         background: #fff;
         border-bottom: 2px solid $yellow;
@@ -141,7 +141,7 @@ body{
         }
     }
 }
-@media (max-width: 767px){
+@media (max-width: 768px){
     .platform{
         width: 80vw;
         ul{
@@ -163,9 +163,6 @@ body{
         justify-content: space-between;
         li{
             width: 23.5%;
-            border-radius: 12px;
-            box-shadow: 0px 2px 10px #00000014;
-            background: #fff;
             .roleBody{
                 padding: 16px 16px 24px;
             }  
@@ -179,7 +176,7 @@ body{
         }
     }
 }
-@media (max-width: 767px){
+@media (max-width: 768px){
     .role{
         ul{
             width: 67vw;
@@ -207,17 +204,12 @@ body{
         gap: 18px 28px;
         li{
             width: 230px;
-            border-radius: 12px;
-            box-shadow: 0px 2px 10px #00000014;
             padding: 32px 32px 48px;
-            background: #fff;
             .icon{
                 width: 86px;
                 height: 86px;
-                background: #FFFFFF;
                 background-repeat: no-repeat;
                 background-position: center;
-                box-shadow: 0px 2px 10px #00000014;
                 border-radius: 100%;
             }
             &:first-child .icon{
@@ -238,7 +230,7 @@ body{
         }
     }
 }
-@media (max-width: 767px){
+@media (max-width: 768px){
     .feature{
         display: block;
         .featureContent{
@@ -263,11 +255,8 @@ body{
         text-align: left;
         &>li{
             width: 32.5%;
-            box-shadow: 0px 2px 10px #00000014;
-            border-radius: 12px;
             padding: 48px 32px 24px;
             position: relative;
-            background: #fff;
             p{
                 padding-bottom: 24px;
                 border-bottom: 1px solid #DDDDDD;
@@ -277,7 +266,6 @@ body{
                 height: 80px;
                 width: 80px;
                 border-radius: 100%;
-                box-shadow: 0px 2px 10px #00000014;
                 position: absolute;
                 top: -50px;
             }
@@ -331,7 +319,7 @@ body{
         
     }
 }
-@media (max-width: 767px){
+@media (max-width: 992px){
     .evaluate{
         .userList{
             &>li{
@@ -353,7 +341,7 @@ footer{
         padding-top: 260px;
     }
 }
-@media (max-width: 767px){
+@media (max-width: 768px){
     footer{
         .add{ 
             background: #fff;
@@ -378,7 +366,7 @@ footer{
     background-position: top right;
     position: relative;
 }
-@media (max-width: 767px){
+@media (max-width: 768px){
     .program{
         height: 100vh;
         background-image: url("../images/banner_sm.svg");
@@ -396,7 +384,7 @@ footer{
     border-radius: 0px 0px 0px 300px;
     z-index: -1;
 }
-@media (max-width: 767px){
+@media (max-width: 768px){
     .program-bg{
         height: calc(100vh - 10%);
         border-radius: 0px 0px 0px 150px;
@@ -409,7 +397,7 @@ footer{
     background-size: 361px;
     background-position: -267px 120vh;
 }
-@media (max-width: 767px){
+@media (max-width: 768px){
     .bg-ball{
         background-size: 204px;
         background-position: -108px 210vh;
@@ -436,6 +424,7 @@ footer{
             border-radius: 27px;
             color: $main-color;
             font-family: "Comfortaa";
+            white-space:nowrap;
             &:hover{
                 background: $main-color;
                 color: #fff;
@@ -447,19 +436,24 @@ footer{
         }
     }
 }
-@media (max-width: 767px){
+
+@media (max-width: 768px){
     .programList{
-        width: 93vw;
         .peopleChoose{
-            justify-content: start;
-            overflow-x:scroll;
             li{
                 margin-right: 8px;
             }
             a{
                 padding: 8px 16px;
-                white-space:nowrap;
             }
+        }
+    }
+}
+@media (max-width: 576px) {
+    .programList{
+        .peopleChoose{
+            justify-content: start;
+            overflow-x:scroll;
         }
     }
 }
@@ -472,16 +466,24 @@ footer{
     &>li{
         width: 50%;
         margin-right: 2%;
-        background: #fff;
-        box-shadow: 0px 2px 10px #00000014;
-        border-radius: 12px;
         padding-bottom: 38px;
     }
     .feeBody{
         padding: 32px 23px 0 29px;
     }
 }
-@media (max-width: 767px){
+@media (max-width: 768px) {
+    .feeList{
+        flex-wrap: wrap;
+        &>li{
+            margin-right: auto;
+            margin-left: auto;
+            max-width: 576px;
+            width: 100%;
+        }
+    }
+}
+@media (max-width: 576px){
     .feeList{
         flex-wrap: wrap;
         &>li{
@@ -502,18 +504,18 @@ footer{
         background: #F5F5F5;
         border-radius: 12px;
         padding: 24px 32px;
+        white-space:nowrap;
         span{
             margin-right: 4px;
         }
     }
 }
-@media (max-width: 767px){
+@media (max-width: 992px) {
     .feeFormula{
         &>div{
             width: 46%;
             padding: 16px 24px;
-            white-space:nowrap;
-        }  
+        }
     }
 }
 .functionList{
@@ -528,7 +530,7 @@ footer{
         }
     }
 }
-@media (max-width: 767px){
+@media (max-width: 768px){
     .functionList{
         li{
             img{
@@ -547,8 +549,6 @@ footer{
             background-size:20px;
             background-position: top 19px right 32px;
             padding: 16px 32px;
-            box-shadow: 0px 2px 10px #00000014;
-            border-radius: 12px;
             p{
                 display: none;
                 color: #747474;
@@ -567,7 +567,7 @@ footer{
         }
     }
 }
-@media (max-width: 767px){
+@media (max-width: 768px){
     .QAList{
         ul{
             li{
