--- a/scss/_format.scss
+++ b/scss/_format.scss
@@ -106,7 +106,12 @@
     background: #fff;
     color: $main-color;
 }
-@media (max-width: 768px){
+.card{
+    background: #fff;
+    box-shadow: 0px 2px 10px #00000014;
+    border-radius: 12px;
+}
+@media (max-width: 992px){
     .s-display-n{
         display: none;
     }
