fix: rwd container

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -27,7 +27,7 @@ body{
 }
 @media (max-width: 768px){
     .container{
-        width: 100vw;
+        width: calc(100vw - 20px);
         padding: 0 20px;
     }
 }
