fix: top z-index

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -35,6 +35,7 @@ body{
     position: fixed;
     bottom: 5vh;
     right: 5vw;
+    z-index: 99;
     a{
         color: #fff;
         width: 71px;
