--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -2,16 +2,34 @@ body{
     font-family: "Noto Sans TC", "sans-serif";
 }
 .indexBody{
-    background-image:url("../images/ball01.svg"),url("../images/ball02.svg"),url("../images/ball03.svg");
+    background-image:url("../images/ball01.svg"),url("../images/ball02.svg");
     background-repeat: no-repeat;
-    background-size:360px,310px,150px;
-    background-position:-222px calc(100vh - 180px),calc(100vw - 210px) calc(230vh - 180px),50px 340vh;
+    background-size:360px,310px;
+    background-position:-222px calc(100vh - 180px),calc(100vw - 210px) calc(230vh - 180px);
     color: $black;
 }
 @media (max-width: 768px){
     .indexBody{
         background-size:126px,135px,153px;
         background-position:-77px calc(100vh + 15px),calc(100vw - 88px) 460vh,-76px 750vh;
+    } 
+}
+.hero_ball03{
+    height: 150px;
+    width: 150px;
+    position: absolute;
+    background-image:url("../images/ball03.svg");
+    background-repeat: no-repeat;
+    background-size:150px;
+    z-index: -1;
+    top: 45px;
+    left: -89px;
+}
+@media (max-width: 768px){
+    .hero_ball03{
+        height: 153px;
+        width: 153px;
+        background-size:153px;
     } 
 }
 .container{
@@ -250,6 +268,7 @@ body{
 }
 .evaluate{
     text-align: center;
+    position: relative;
     .userList{
         display: flex;
         justify-content: space-between;
