--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -10,8 +10,8 @@ body{
 }
 @media (max-width: 768px){
     .indexBody{
-        background-size:126px,135px;
-        background-position:-77px calc(100vh + 15px),calc(100vw - 88px) 460vh;
+        background-size:126px;
+        background-position:-77px calc(100vh + 15px);
     } 
 }
 .role-bg{
