--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -303,36 +303,34 @@ body{
         justify-content: space-between;
         text-align: left;
         &>li{
-            width: 32.5%;
+            width: 33%;
             padding: 48px 32px 24px;
             position: relative;
             p{
+                height: 60%;
                 padding-bottom: 24px;
                 border-bottom: 1px solid #DDDDDD;
             }
             .userPic{
-                background-size: contain;
+                background-size: 100%;
                 height: 80px;
                 width: 80px;
                 border-radius: 100%;
                 position: absolute;
                 top: -50px;
-            }
-            &:first-child .userPic{
-                background-image: url("../images/user01.jpg");
-            }
-            &:nth-child(2) .userPic{
-                background-image: url("../images/user02.jpg");
-            }
-            &:nth-child(3) .userPic{
-                background-image: url("../images/user03.jpg");
+                img{
+                    width: 100%;
+                    object-fit: contain;
+                    border-radius: 100%;
+                }
             }
         }
     }
     .userBody{
-        display: flex;
         justify-content: space-between;
-        align-items: flex-end;
+        h3{
+            font-weight: bold;
+        }
     }
     .star{
         display: flex;
@@ -346,26 +344,8 @@ body{
         }
     }
     .userInfo{
-        h3{
-            font-weight: bold;
-        }
-    }
-    .bar{
         display: flex;
-        justify-content: center;
-        li{
-            height: 10px;
-            width: 10px;
-            background: #DDDDDD;
-            border-radius: 50px;
-            margin-right: 8px;
-            &:last-child{
-                width: 16px;
-                background: #FFD153;
-                margin-right: 0;
-            }
-        }
-        
+        justify-content: space-between;
     }
 }
 @media (max-width: 992px){
